--- a/templates/owlcarousel-item.html.twig
+++ b/templates/owlcarousel-item.html.twig
@@ -1,1 +1,13 @@
-pippo
+{#
+    /**
+     * @file
+     * Item template for Owl Carousel
+     */
+#}
+{% extends "owl.wrapper.html" %}
+
+{% block item %}
+    <div class="item js-owlItem ">
+        {{ item.content }}
+    </div>
+{% endblock item %}
