--- a/templates/owlcarousel-item.html.twig
+++ b/templates/owlcarousel-item.html.twig
@@ -4,7 +4,7 @@
      * Item template for Owl Carousel
      */
 #}
-{% extends "owl.wrapper.html" %}
+{% extends "owlcarousel-wrapper.html" %}
 
 {% block item %}
     <div class="item js-owlItem ">
