form update - tabs, qol

--- a/css/owl.settings.css
+++ b/css/owl.settings.css
@@ -1,14 +1,12 @@
 @media (min-width: 680px) {
     [class*='1/2'] {
         float: left;
-        width: 43.47826%;
-        margin-right: 13.04348%;
+        width: 50%;
     }
 
     [class*='2/2'] {
         float: left;
         clear: both;
-        width: 43.47826%;
     }
 
     [class*='2/2']:after {
@@ -17,4 +15,124 @@
         content: ' ';
     }
 
+}
+
+.settings {
+    clear: both;
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-top: 20px;
+}
+
+.settings * {
+    box-sizing: border-box;
+}
+
+.settings__tabs {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+
+    background-color: #e0e0d8;
+}
+
+.settings__tab {
+    display: block;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+
+    flex-grow: 1;
+    flex-basis: auto;
+}
+
+.settings__link {
+    display: block;
+    border-bottom: 5px solid transparent;
+    background-color: #e0e0d8;
+
+    font-size: 1em;
+    line-height: 20px;
+    padding: 0 5px;
+
+    cursor: pointer;
+}
+
+.settings__link:hover,
+.is--active .settings__link {
+    border-bottom: 5px solid #0074bd;
+    background-color: white;
+}
+
+@media (min-width: 680px) {
+    .settings__tabs {
+        float: left;
+        width: 25%;
+        flex-direction: column;
+        background-color: white;
+        border-right: 1px solid #e0e0d8;
+    }
+
+    .settings__tab {
+        text-align: right;
+        width: 100%;
+        flex-grow: 0;
+
+        margin-left: 1px;
+    }
+
+    .settings__link {
+        font-size: 1.4em;
+        line-height: 40px;
+        border-bottom: none;
+        border-right: 5px solid transparent;
+    }
+
+    .settings__link:hover {
+        border-bottom: none;
+    }
+
+    .is--active .settings__link {
+        border-bottom: none;
+        border-right: 5px solid #0074bd;
+    }
+
+}
+
+.settings__contentainer {
+    padding: 0 20px;
+}
+
+.settings__content {
+    display: none;
+}
+
+.settings__content.is--active {
+    display: block;
+    width: 100%;
+}
+
+@media (min-width: 680px) {
+    .settings__contentainer {
+        float: left;
+        width: 75%;
+
+        display: flex;
+    }
+
+    .settings__content .form-item:first-child {
+        margin-top: 0;
+    }
+}
+
+.is--disabled{
+    opacity: .2;
 }
