--- a/css/owl.settings.css
+++ b/css/owl.settings.css
@@ -6,7 +6,8 @@
 
     [class*='2/2'] {
         float: left;
-        clear: both;
+        width: 100%;
+
     }
 
     [class*='2/2']:after {
@@ -16,7 +17,7 @@
     }
 
 }
-
+/*
 .settings {
     clear: both;
     width: 100%;
@@ -136,3 +137,4 @@
 .is--disabled{
     opacity: .2;
 }
+*/
