--- a/css/owl.settings.css
+++ b/css/owl.settings.css
@@ -1,4 +1,4 @@
-@media (min-width: 680px) {
+@media (min-width: 980px) {
     [class*='1/2'] {
         float: left;
         width: 50%;
@@ -17,7 +17,7 @@
     }
 
 }
-/*
+
 .settings {
     clear: both;
     width: 100%;
@@ -61,51 +61,16 @@
     background-color: #e0e0d8;
 
     font-size: 1em;
-    line-height: 20px;
+    line-height: 35px;
     padding: 0 5px;
 
     cursor: pointer;
 }
 
-.settings__link:hover,
+.settings__link:not(.is--disabled):hover,
 .is--active .settings__link {
     border-bottom: 5px solid #0074bd;
     background-color: white;
-}
-
-@media (min-width: 680px) {
-    .settings__tabs {
-        float: left;
-        width: 25%;
-        flex-direction: column;
-        background-color: white;
-        border-right: 1px solid #e0e0d8;
-    }
-
-    .settings__tab {
-        text-align: right;
-        width: 100%;
-        flex-grow: 0;
-
-        margin-left: 1px;
-    }
-
-    .settings__link {
-        font-size: 1.4em;
-        line-height: 40px;
-        border-bottom: none;
-        border-right: 5px solid transparent;
-    }
-
-    .settings__link:hover {
-        border-bottom: none;
-    }
-
-    .is--active .settings__link {
-        border-bottom: none;
-        border-right: 5px solid #0074bd;
-    }
-
 }
 
 .settings__contentainer {
@@ -121,20 +86,8 @@
     width: 100%;
 }
 
-@media (min-width: 680px) {
-    .settings__contentainer {
-        float: left;
-        width: 75%;
-
-        display: flex;
-    }
-
-    .settings__content .form-item:first-child {
-        margin-top: 0;
-    }
-}
 
 .is--disabled{
     opacity: .2;
+    cursor: default;
 }
-*/
