owlCarousel - twig & js init

--- a/templates/owlcarousel-item.html.twig
+++ b/templates/owlcarousel-item.html.twig
@@ -7,7 +7,7 @@
 {% extends "owlcarousel-wrapper.html" %}
 
 {% block item %}
-    <div class="item js-owlItem ">
+    <div class="item">
         {{ item.content }}
     </div>
 {% endblock item %}
